<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_rectangle_main">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="42dp"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:fontFamily="@font/fremont_regular"
        android:text="@string/umy_update"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_logo" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="43dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingEnd="20dp"
            android:paddingStart="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/sign_in"
                android:textColor="#25543E"
                android:textSize="18sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_border_box_3dp"
                android:fontFamily="@font/ubuntu_li"
                android:hint="@string/email"
                android:paddingEnd="10dp"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:textSize="14sp"
                tools:ignore="Autofill,LabelFor,RtlSymmetry,TextFields" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/bg_border_box_3dp"
                android:fontFamily="@font/ubuntu_li"
                android:hint="@string/password"
                android:paddingEnd="10dp"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:textSize="14sp"
                tools:ignore="Autofill,LabelFor,TextFields" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/forgot_password"
                android:textColor="#3F51B5"
                android:textSize="14sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="22dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/bg_rectangle_main"
                android:fontFamily="@font/ubuntu_m"
                android:text="@string/login"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:text="@string/copyright_by_bhp_umy_nall_right_reserved"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>